After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672249 - gdbusproxy leaks asyncresult in an error case instead of completing
gdbusproxy leaks asyncresult in an error case instead of completing
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
unspecified
Other All
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks: 672239
 
 
Reported: 2012-03-16 17:15 UTC by Allison Karlitskaya (desrt)
Modified: 2012-03-19 16:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GDBusProxy: report an error instead of leaking it (3.22 KB, patch)
2012-03-16 17:18 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Allison Karlitskaya (desrt) 2012-03-16 17:15:34 UTC
GDBusProxy leaks the async result in the case of doing an async call on a proxy that was created for a well-known name with the "no autostart" flag when that name doesn't already exist.
Comment 1 Allison Karlitskaya (desrt) 2012-03-16 17:18:35 UTC
Created attachment 209944 [details] [review]
GDBusProxy: report an error instead of leaking it

GDBusProxy sets an error on a GSimpleAsyncResult and then returns
without dispatching the result for completion (and leaks the result in
the process).  Fix that.

Also add a testcase.  Unfortunately, adding the testcase uncovered
bug #672248.  We can work around that by reordering the tests.
Comment 2 David Zeuthen (not reading bugmail) 2012-03-19 16:36:56 UTC
Comment on attachment 209944 [details] [review]
GDBusProxy: report an error instead of leaking it

Looks good to me. Thanks!
Comment 3 Allison Karlitskaya (desrt) 2012-03-19 16:41:41 UTC
Attachment 209944 [details] pushed as c3125ee - GDBusProxy: report an error instead of leaking it